# File-Processing-CLI-Tool

./: Cargo.toml  README.md  output.json
src/: cli.rs  errors.rs  io.rs  main.rs  models.rs  parser.rs
test_data/: users.csv  users.json
