[package]
name = "rusty_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.1"
clap = { version = "4.5.26", features = ["derive"] }
thiserror = "2.0.11"
futures = "0.3"
